[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidpy"
version = "0.0.8"
authors = [
  { name="omame", email="me@omame.xyz" },
]
description = "a very small Discord library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/omametech/minidpy"
"Bug Tracker" = "https://github.com/omametech/minidpy/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "/token.txt"
]

[tool.hatch.build.targets.wheel]
packages = ["minidpy"]
